<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="@dimen/txtWidth"
                android:layout_height="@dimen/txtHeight"
                android:text="@string/Titulo"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/txtSize" />

            <EditText
                android:id="@+id/editTitulo"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:backgroundTint="@color/inputColorHint"
                android:hint="@string/TituloHint"
                android:textColor="@color/inputColor"
                android:textSize="@dimen/txtSize" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="@dimen/txtWidth"
                android:layout_height="@dimen/txtHeight"
                android:text="@string/Descripcion"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/txtSize" />

            <EditText
                android:id="@+id/editDescripcion"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:hint="@string/DescripcionHint"
                android:backgroundTint="@color/inputColorHint"
                android:inputType="textMultiLine"
                android:textColor="@color/inputColor"
                android:textSize="@dimen/txtSize" />

            <TextView
                android:id="@+id/txtCorreo"
                android:layout_width="@dimen/txtWidth"
                android:layout_height="@dimen/txtHeight"
                android:text="@string/Correo"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/txtSize" />

            <EditText
                android:id="@+id/editCorreo"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:hint="@string/CorreoHint"
                android:backgroundTint="@color/inputColorHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/inputColor"
                android:textSize="@dimen/txtSize"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="@dimen/txtWidth"
                android:layout_height="@dimen/txtHeight"
                android:text="@string/Precio"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/txtSize" />

            <EditText
                android:id="@+id/editPrecio"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:hint="@string/PrecioHint"
                android:backgroundTint="@color/inputColorHint"
                android:inputType="number"
                android:textColor="@color/inputColor"
                android:textSize="@dimen/txtSize" />

            <TextView
                android:id="@+id/txtCategoria"
                android:layout_width="@dimen/txtWidth"
                android:layout_height="@dimen/txtHeight"
                android:text="@string/Categoria"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/txtSize" />

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:entries="@array/Categorias"
                android:text="Seleccione Categoria" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDescuento"
                    android:layout_width="@dimen/txtWidth"
                    android:layout_height="@dimen/txtHeight"
                    android:text="@string/DescEnvio"
                    android:textColor="@color/txtColor"
                    android:textSize="@dimen/txtSize" />

                <Switch
                    android:id="@+id/switchDescuento"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/txtHeight"
                    android:gravity="end"
                    android:onClick="ActivarDescuento" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDescuento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:visibility="gone" />

                <SeekBar
                    android:id="@+id/seekBarDescuento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxRetiro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="ActivarRetiro"
                android:text="@string/Retiro" />

            <TextView
                android:id="@+id/txtRetiro"
                android:layout_width="@dimen/txtWidth"
                android:layout_height="@dimen/txtHeight"
                android:text="@string/DirRetiro"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/txtSize"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editRetiro"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:hint="@string/RetiroHint"
                android:backgroundTint="@color/inputColorHint"
                android:textColor="@color/inputColor"
                android:textSize="@dimen/txtSize"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkBoxTerminos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Terminos" />

            <Button
                android:id="@+id/buttonAceptar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/botonColor"
                android:gravity="center"
                android:onClick="ValidarCampos"
                android:text="@string/Publicar"
                android:textColor="@color/txtBotonColor"
                android:textSize="@dimen/txtBotonSize" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>